--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,16 @@
-<h1>Make your form here</h1>
+  
+<form action='/pirates' method="post">
+    <h2>Pirate</h2>
+    <label for="pirate_name">Pirate Name:</label> <input id="pirate_name" type="text" name="pirate[name]"><br>
+    <label for="pirate_weight">Pirate Weight:</label> <input id="pirate_weight" type="text" name="pirate[weight]"><br>
+    <label for="pirate_height">Pirate Height:</label> <input id="pirate_height" type="text" name="pirate[height]"><br>
+    <h2>Ship 1</h2>
+    <label for="ship_name_1">First Ship Name:</label> <input id="ship_name_1" type="text" name="pirate[ships][][name]"><br>
+    <label for="ship_type_1">First Ship Type:</label> <input id="ship_type_1" type="text" name="pirate[ships][][type]"><br>
+    <label for="ship_booty_1">First Ship Booty:</label> <input id="ship_booty_1" type="text" name="pirate[ships][][booty]"><br>
+    <h2>Ship 2</h2>
+    <label for="ship_name_2">Second Ship Name:</label> <input id="ship_name_2" type="text" name="pirate[ships][][name]"><br>
+    <label for="ship_type_2">Second Ship Type:</label> <input id="ship_type_2" type="text" name="pirate[ships][][type]"><br>
+    <label for="ship_booty_2">Second Ship Booty:</label> <input id="ship_booty_2" type="text" name="pirate[ships][][booty]"><br>
+    <input type="submit" id="Submit">
+</form>
